package domain

type Measurement struct {
	Type string
	Value float64
	Unit string
}
