package tank

func NewTank() *Tank{
	return &Tank{}
}

type Tank struct {

}
